--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,11 +11,14 @@
       />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
       <!-- font -->
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
       <link
-         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Raleway:wght@300;400;600;700&display=swap"
          rel="stylesheet"
+         href="../src/assets/fonts/Poppins/stylesheet.css"
+      />
+      <link
+         rel="stylesheet"
+         href="../src/assets/fonts/Raleway/stylesheet.css"
       />
       <!--
       manifest.json provides metadata used when your web app is installed on a
