--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,10 @@
          rel="stylesheet"
          href="../src/assets/fonts/Raleway/stylesheet.css"
       />
+      <link
+         rel="stylesheet"
+         href="../src/assets/fonts/Montserratt/stylesheet.css"
+      />
       <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
